--- a/contract/views/sale_order_inherit.xml
+++ b/contract/views/sale_order_inherit.xml
@@ -21,7 +21,8 @@
             </xpath>
             <!--view button xpath in sale_order_line-->
             <xpath expr="//tree/field[@name='price_subtotal']" position="after">
-                <button name="open_order_line" string="View" type="object"/>
+                <field name="delivered_time"/>
+<!--                <button name="open_order_line" string="View" type="object"/>-->
             </xpath>
             <xpath expr="//tree/field[@name='product_id']" position="before">
                 <field name="change_order"/>
@@ -90,6 +91,16 @@
                         </field>
                     </page>
                 </notebook>
+                <div class="oe_chatter" style="display:block">
+                    <field name="message_follower_ids" groups="base.group_user"/>
+                    <field name="message_ids" widget="mail_thread"/>
+                </div>
+            </xpath>
+            <xpath expr="//sheet" position="after">
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" groups="base.group_user"/>
+                    <field name="message_ids" widget="mail_thread"/>
+                </div>
             </xpath>
             <xpath expr="//sheet//group/field[@name='product_id']" position="attributes">
                 <attribute name="string">Scope</attribute>
